Moved access token to cookie
